--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div id="chart">
+<!-- <div id="chart">
     <apx-chart
       [series]="chartOptions.series"
       [chart]="chartOptions.chart"
@@ -7,4 +7,12 @@
       [title]="chartOptions.title"
     ></apx-chart>
   </div>
-  
+   -->
+
+   <fusioncharts
+   [type]="type"
+   [width]="width"
+   [height]="height"
+   [dataSource]="dataSource"
+>
+</fusioncharts>
