--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,25 @@
-<!-- <div id="chart">
-    <apx-chart
-      [series]="chartOptions.series"
-      [chart]="chartOptions.chart"
-      [xaxis]="chartOptions.xaxis"
-      [yaxis]="chartOptions.yaxis"
-      [title]="chartOptions.title"
-    ></apx-chart>
-  </div>
-   -->
+<!-- <fusioncharts [type]="type" [width]="width" [height]="height" [dataSource]="dataSource">
+</fusioncharts> -->
 
-   <fusioncharts
-   [type]="type"
-   [width]="width"
-   [height]="height"
-   [dataSource]="dataSource"
->
-</fusioncharts>
+<div class="control-section">
+    <div *ngIf="data1.length > 0">
+        <ejs-stockchart id='StockChartCandle' [chartArea]='chartArea' [primaryXAxis]='primaryXAxis' style="display:block;"
+            [primaryYAxis]='primaryYAxis' [crosshair]='crosshair' [title]='title' [titleStyle]='titleStyle' [tooltip]='tooltip'
+            (tooltipRender)='tooltipRender($event)' (axisLabelRender)='axisLabelRender($event)' (load)='load($event)'>
+            <e-stockchart-axes>
+                <e-stockchart-axis rowIndex=1 name='yAxis1' opposedPosition=true labelPosition='Inside' tickPosition='Inside'>
+                </e-stockchart-axis>
+            </e-stockchart-axes>
+            <e-stockchart-rows>
+                <e-stockchart-row height=30%></e-stockchart-row>
+                <e-stockchart-row height=70%></e-stockchart-row>
+            </e-stockchart-rows>
+            <e-stockchart-series-collection>
+                <e-stockchart-series [dataSource]='data1' type='Candle' xName='x' yName='high' yAxisName='yAxis1' high='high' low='low'>
+                </e-stockchart-series>
+                <e-stockchart-series [dataSource]='data1' type='Column' xName='x' yName='volume' high='high' low='low' name='Apple Inc'>
+                </e-stockchart-series>
+            </e-stockchart-series-collection>
+        </ejs-stockchart>
+    </div>
+</div>
