--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div *ngIf="displayChart && data.length > 0">
-    <fusioncharts [type]="timeseries" [width]="width" [height]="height" [dataSource]="dataSource">
+    <fusioncharts [type]="type" [width]="width" [height]="height" [dataSource]="dataSource">
     </fusioncharts>
 </div>
