--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     </fusioncharts>
 
 </div>
-<div *ngIf="displayChart && dataSourceInterest">
+<div *ngIf="dataSourceInterest">
     <fusioncharts [width]="800" [height]="400" [type]="'line'" [dataFormat]="'json'" [dataSource]="dataSourceInterest">
     </fusioncharts>
 
