debut long and short

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="displayChart && data.length > 0">
+<!-- <div *ngIf="displayChart && data.length > 0">
   <fusioncharts
     [type]="'timeseries'"
     [width]="'100%'"
@@ -27,3 +27,4 @@
   >
   </fusioncharts>
 </div>
+ -->
