--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,15 +16,4 @@
     [dataSource]="dataSourceRisk"
   >
   </fusioncharts>
-</div>
-<div *ngIf="dataSourceInterest">
-  <fusioncharts
-    [width]="800"
-    [height]="400"
-    [type]="'line'"
-    [dataFormat]="'json'"
-    [dataSource]="dataSourceInterest"
-  >
-  </fusioncharts>
-</div>
- -->
+</div> -->
